--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Header Section -->
     <header>
         <h1>Mohammad Moinuddin Kader Chowdhury</h1>
-        <p>Software Engineer | Cybersecurity and Blockchain Enthusiast</p>
+        <p>Software Engineer | Cybersecurity and AI Enthusiast</p>
         <a href="mailto:mkshovan@gmail.com">mkshovan@gmail.com</a> |
         <a href="https://www.linkedin.com/in/moinuddin_kader">LinkedIn</a> |
         <a href="https://github.com/Moinuddin-Shovan">GitHub</a>
@@ -28,8 +28,7 @@
             low-latency APIs. Proficient in payment device integration, TDD, and API scripting with JavaScript and
             Python. Experienced
             in integrating ML models with Android and developing cross-platform apps with Flutter. Enthusiastic about
-            cyber
-            security, computer vision, and blockchain.</p>
+            cyber security, LLMs, computer vision, and blockchain.</p>
     </section>
 
     <!-- Skills Section -->
