--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Mohammad Moinuddin Kader Chowdhury</h1>
         <p>Software Engineer | Cybersecurity and AI Enthusiast</p>
         <a href="mailto:mkshovan@gmail.com">mkshovan@gmail.com</a> |
-        <a href="https://www.linkedin.com/in/moinuddin_kader">LinkedIn</a> |
+        <a href="https://www.linkedin.com/in/moinuddin-shovan">LinkedIn</a> |
         <a href="https://github.com/Moinuddin-Shovan">GitHub</a>
         <button class="theme-toggle" onclick="toggleTheme()">Dark Mode</button>
     </header>
@@ -24,23 +24,21 @@
     <!-- About Section -->
     <section id="about">
         <h2>About Me</h2>
-        <p>Software engineer with 2+ years of experience in C++ development for retail systems, advanced algorithms, and
-            low-latency APIs. Proficient in payment device integration, TDD, and API scripting with JavaScript and
-            Python. Experienced
-            in integrating ML models with Android and developing cross-platform apps with Flutter. Enthusiastic about
-            cyber security, LLMs, computer vision, and blockchain.</p>
+        <p>Software engineer with 2+ years of experience in C++ development for retail solutions, advanced algorithms, and low-latency APIs. Proficient in payment device integration, TDD, and API scripting with JavaScript and Python. Experienced
+            in integrating different Machine Learning (ML) models with Android and developing cross-platform apps with Flutter.
+            Enthusiastic about AI, MLOps, LLMOps, Cyber Security, Computer Vision and Blockchain.</p>
     </section>
 
     <!-- Skills Section -->
     <section id="skills">
         <h2>Skills</h2>
         <ul>
-            <li><strong>Languages:</strong> C++, Python, JavaScript, Java, Dart, Bash</li>
+            <li><strong>Languages:</strong> C/C++, Python, JavaScript, Java, Dart, Bash</li>
             <li><strong>Web Development:</strong> Django, MERN, Next.js</li>
             <li><strong>Mobile App Development:</strong> Flutter, Android (Kotlin)</li>
-            <li><strong>Machine Learning Tools:</strong> OpenCV, TensorFlow, Scikit-learn, Kaggle</li>
+            <li><strong>Machine Learning Tools:</strong> OpenCV, YOLO, TensorFlow, Scikit-learn, Kaggle</li>
             <li><strong>Databases:</strong> MongoDB, MySQL, PostgreSQL, Firebase</li>
-            <li><strong>Design Tools:</strong> Adobe Photoshop, Canva, Figma</li>
+            <li><strong>Design Tools:</strong> Midjourney.AI, Adobe Photoshop, Canva, Figma</li>
         </ul>
     </section>
 
@@ -48,7 +46,7 @@
     <section id="experience">
         <h2>Experience</h2>
         <div>
-            <h3>Software Engineer - Fiftytwo Digital Ltd.</h3>
+            <h3>Software Engineer - Fiftytwo A/S</h3>
             <p>July 2022 - Present | Dhaka, Bangladesh</p>
                 <li>Develop and maintain omni-channel retail software using C++ with a focus on test-driven development
                     (TDD)</li>
@@ -130,12 +128,15 @@
 <!-- Certifications Section -->
 <section id="certifications">
     <h2>Certifications</h2>
-    <ul>
+    <ul> 
+        <li>Generative AI with LLMs: DeepLearning.AI</li>
+        <li>LLMOps best practices with Google Cloud: DeepLearning.AI</li>
+        <li>Machine Learning A-Z: AI, Python (Udemy)</li>
+        <li>Data Science Fundamentals: Machine and Deep Learning (365 DataScience)</li>
+        <li>Machine Learning Specialization: Andrew Ng (Coursera)</li>
+        <li>Explore Cyber Security: Divergence Academy</li>
         <li>Advanced Android Development Bootcamp (Stamasoft Tech)</li>
-        <li>Complete Flutter Development (Angela Yu, Udemy)</li>
-        <li>Data Science Fundamentals (365 DataScience)</li>
         <li>ITEE Full Passer (Nov 2021) - ID: FE03-0006</li>
-        <li>IELTS Score: Listening - 7.5, Reading - 6, Writing - 7, Speaking - 7 | Overall Band 7</li>
     </ul>
 </section>
 
